Adding a section to set the MAVEN_OPTS